--- a/estilo.css
+++ b/estilo.css
@@ -87,7 +87,7 @@ button {
     font: normal 1.0rem bold;
     box-shadow: 0px 0px 10px black;
     background: #000;
-    color: rgb(255, 198, 0);
+    color: white;
     padding: 20px;
     box-sizing: border-box;
     user-select: none;
